# rvemu

./: .clang-format  CMakeLists.txt  Makefile  README.md  build.zig
.github/: riscv_env.sh
.github/workflows/: linux-cmake-clang.yml  test.yml
include/: elfdef.h  reg.h  rvemu.h  types.h  utils.h
src/: Machine.zig  Mmu.zig  State.zig  csr.h  decode.c  decode.h  elfdef.h  instr.h  instr.zig  interp.c  interp.h  machine.c  machine.h  main.c  main.zig  mmu.c  mmu.h  reg.h  riscv.zig  rvemu.h  syscall.c  syscall.h  types.h  utils.h  utils.zig
test/: run-riscv-tests.sh  run_isa_tests.sh
